// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. daily universal register 1`] = `
<style>
.IS1 {
  width: 237;
  height: 60;
  margin-vertical: 10px;
  margin-top: 15px;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04;
  font-size: 15px;
  margin-bottom: 15px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 15px;
  margin-left: 15px;
}

.IS4 {
  width: 60;
  height: 45;
  margin-right: 15px;
  margin-bottom: 10px;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 15px;
  margin-bottom: 15px;
}

.IS7 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 15px;
  margin-left: 15px;
}

.IS8 {
  width: 60;
  height: 45;
  margin-right: 15px;
  margin-bottom: 10px;
}

.IS9 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS10 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  -webkit-align-items: center;
  align-items: center;
  background-color: rgba(240,240,240,1.00);
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  margin-right: 20px;
  margin-left: 20px;
  margin-top: 15px;
  margin-bottom: 15px;
  padding-top: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
  -ms-flex-align: center;
  -webkit-box-align: center;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS12 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS12"
>
  <div
    className="css-view-1dbjc4n IS11"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      uri="https://www.thetimes.co.uk/d/img/DUR-masthead-40fe00731f.png"
    />
    <div
      className="css-text-901oao IS2"
    >
      Daily Universal Register
    </div>
    <div
      className="css-view-1dbjc4n IS10"
    >
      <div
        className="css-view-1dbjc4n IS5"
      >
        <TileS
          breakpoint="wide"
        />
        <div
          className="css-view-1dbjc4n IS3"
        />
        <TileS
          breakpoint="wide"
          logo={
            <Logo
              className="IS4"
              imageUri="https://www.thetimes.co.uk/d/img/DUR-nature-80d36dd1cd.png"
              ratio={1}
              type="nature notes"
            />
          }
        />
      </div>
      <div
        className="css-view-1dbjc4n IS6"
      />
      <div
        className="css-view-1dbjc4n IS9"
      >
        <TileS
          breakpoint="wide"
        />
        <div
          className="css-view-1dbjc4n IS7"
        />
        <TileS
          breakpoint="wide"
          logo={
            <Logo
              className="IS8"
              imageUri="https://www.thetimes.co.uk/d/img/DUR-birthdays-94b2272911.png"
              ratio={1}
              type="birthdays"
            />
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`1. secondary one and four 1`] = `
<style>
.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 15px;
  margin-right: 15px;
  margin-bottom: 15px;
  margin-left: 15px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 15px;
  margin-left: 15px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  width: 50%;
}

.IS6 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  width: 50%;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  border-bottom-width: 1px;
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS10 {
  width: 50%;
}

.IS11 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS12 {
  width: 50%;
}

.IS13 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS14 {
  width: 50%;
}

.IS15 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS16 {
  background-color: rgba(39,45,52,1.00);
}

.IS17 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}

.IS18 {
  margin-right: 20px;
  margin-left: 20px;
  margin-top: 15px;
  margin-bottom: 15px;
}
</style>

<div
  className="css-view-1dbjc4n IS18"
>
  <div
    className="css-view-1dbjc4n IS17"
  >
    <div
      className="css-view-1dbjc4n IS16"
    >
      <div
        className="css-view-1dbjc4n IS1"
      >
        <TheSTLogo
          height={40}
          width={60}
        />
      </div>
      <div
        className="css-view-1dbjc4n IS2"
      />
      <div
        className="css-view-1dbjc4n IS15"
      >
        <div
          className="css-view-1dbjc4n IS3"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileN
              breakpoint="wide"
              tileName="secondary"
            />
          </div>
        </div>
        <div
          className="css-view-1dbjc4n IS4"
        />
        <div
          className="css-view-1dbjc4n IS14"
        >
          <div
            className="css-view-1dbjc4n IS8"
          >
            <div
              className="css-view-1dbjc4n IS5"
            >
              <TileO
                breakpoint="wide"
                tileName="support1"
              />
            </div>
            <div
              className="css-view-1dbjc4n IS6"
            />
            <div
              className="css-view-1dbjc4n IS7"
            >
              <TileO
                breakpoint="wide"
                tileName="support2"
              />
            </div>
          </div>
          <div
            className="css-view-1dbjc4n IS9"
          />
          <div
            className="css-view-1dbjc4n IS13"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <TileO
                breakpoint="wide"
                tileName="support3"
              />
            </div>
            <div
              className="css-view-1dbjc4n IS11"
            />
            <div
              className="css-view-1dbjc4n IS12"
            >
              <TileO
                breakpoint="wide"
                tileName="support4"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`1. secondary one and four 2`] = `
<style>
.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 15px;
  margin-right: 15px;
  margin-bottom: 15px;
  margin-left: 15px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 15px;
  margin-left: 15px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  width: 50%;
}

.IS6 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  width: 50%;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  border-bottom-width: 1px;
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS10 {
  width: 50%;
}

.IS11 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS12 {
  width: 50%;
}

.IS13 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS14 {
  width: 50%;
}

.IS15 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS16 {
  background-color: rgba(39,45,52,1.00);
}

.IS17 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}

.IS18 {
  margin-right: 20px;
  margin-left: 20px;
  margin-top: 15px;
  margin-bottom: 15px;
}
</style>

<div
  className="css-view-1dbjc4n IS18"
>
  <div
    className="css-view-1dbjc4n IS17"
  >
    <div
      className="css-view-1dbjc4n IS16"
    >
      <div
        className="css-view-1dbjc4n IS1"
      >
        <TheTimesLogo
          height={40}
          width={42}
        />
      </div>
      <div
        className="css-view-1dbjc4n IS2"
      />
      <div
        className="css-view-1dbjc4n IS15"
      >
        <div
          className="css-view-1dbjc4n IS3"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileN
              breakpoint="wide"
              tileName="secondary"
            />
          </div>
        </div>
        <div
          className="css-view-1dbjc4n IS4"
        />
        <div
          className="css-view-1dbjc4n IS14"
        >
          <div
            className="css-view-1dbjc4n IS8"
          >
            <div
              className="css-view-1dbjc4n IS5"
            >
              <TileO
                breakpoint="wide"
                tileName="support1"
              />
            </div>
            <div
              className="css-view-1dbjc4n IS6"
            />
            <div
              className="css-view-1dbjc4n IS7"
            >
              <TileO
                breakpoint="wide"
                tileName="support2"
              />
            </div>
          </div>
          <div
            className="css-view-1dbjc4n IS9"
          />
          <div
            className="css-view-1dbjc4n IS13"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <TileO
                breakpoint="wide"
                tileName="support3"
              />
            </div>
            <div
              className="css-view-1dbjc4n IS11"
            />
            <div
              className="css-view-1dbjc4n IS12"
            >
              <TileO
                breakpoint="wide"
                tileName="support4"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`2. lead one full width 1`] = `
<style>
.IS1 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS1"
>
  <TileR
    breakpoint="wide"
    tileName="lead"
  />
</div>
`;

exports[`2. leaders 1`] = `
<style>
.IS1 {
  height: 42;
  width: 227;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 15px;
  line-height: 15px;
  text-align: center;
}

.IS3 {
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  padding-right: 20px;
  padding-left: 20px;
  width: 33%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-bottom: 60px;
  margin-top: 30px;
}

.IS7 {
  padding-right: 20px;
  padding-left: 20px;
  width: 33%;
}

.IS8 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-bottom: 60px;
  margin-top: 30px;
}

.IS9 {
  padding-right: 20px;
  padding-left: 20px;
  width: 33%;
}

.IS10 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  background-color: rgba(240,240,240,1.00);
  margin-right: 20px;
  margin-left: 20px;
  margin-top: 15px;
  margin-bottom: 15px;
  padding-top: 30px;
}

.IS12 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS12"
>
  <div
    className="css-view-1dbjc4n IS11"
  >
    <div
      className="css-view-1dbjc4n IS4"
    >
      <Image
        aspectRatio={5.4}
        className="IS1"
        uri="https://www.thetimes.co.uk/d/img/logos/sundaytimes-with-crest-black-53d6e31fb8.png"
      />
      <div
        className="css-view-1dbjc4n IS3"
      >
        <div
          className="css-text-901oao IS2"
        >
           Leading Articles 
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n IS10"
    >
      <div
        className="css-view-1dbjc4n IS5"
      >
        <TileM
          breakpoint="wide"
          tileName="leader2"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS6"
      />
      <div
        className="css-view-1dbjc4n IS7"
      >
        <TileM
          breakpoint="wide"
          tileName="leader1"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS8"
      />
      <div
        className="css-view-1dbjc4n IS9"
      >
        <TileM
          breakpoint="wide"
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`2. leaders 2`] = `
<style>
.IS1 {
  height: 42;
  width: 237;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 15px;
  line-height: 15px;
  text-align: center;
}

.IS3 {
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  padding-right: 20px;
  padding-left: 20px;
  width: 33%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-bottom: 60px;
  margin-top: 30px;
}

.IS7 {
  padding-right: 20px;
  padding-left: 20px;
  width: 33%;
}

.IS8 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-bottom: 60px;
  margin-top: 30px;
}

.IS9 {
  padding-right: 20px;
  padding-left: 20px;
  width: 33%;
}

.IS10 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  background-color: rgba(240,240,240,1.00);
  margin-right: 20px;
  margin-left: 20px;
  margin-top: 15px;
  margin-bottom: 15px;
  padding-top: 30px;
}

.IS12 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS12"
>
  <div
    className="css-view-1dbjc4n IS11"
  >
    <div
      className="css-view-1dbjc4n IS4"
    >
      <Image
        aspectRatio={5.74}
        className="IS1"
        uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
      />
      <div
        className="css-view-1dbjc4n IS3"
      >
        <div
          className="css-text-901oao IS2"
        >
           Leading Articles 
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n IS10"
    >
      <div
        className="css-view-1dbjc4n IS5"
      >
        <TileM
          breakpoint="wide"
          tileName="leader2"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS6"
      />
      <div
        className="css-view-1dbjc4n IS7"
      >
        <TileM
          breakpoint="wide"
          tileName="leader1"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS8"
      />
      <div
        className="css-view-1dbjc4n IS9"
      >
        <TileM
          breakpoint="wide"
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`3. lead one and one 1`] = `
<style>
.IS1 {
  width: 75%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 15px;
  margin-bottom: 15px;
}

.IS3 {
  width: 25%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS5"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileU
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAA
        breakpoint="wide"
        tileName="support"
      />
    </div>
  </div>
</div>
`;

exports[`4. lead one and four 1`] = `
<style>
.IS1 {
  width: 60%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  width: 40%;
}

.IS7 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS8 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS8"
>
  <div
    className="css-view-1dbjc4n IS7"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAC
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS6"
    >
      <TileAD
        tileName="support1"
      />
      <div
        className="css-view-1dbjc4n IS3"
      />
      <TileAD
        tileName="support2"
      />
      <div
        className="css-view-1dbjc4n IS4"
      />
      <TileAD
        tileName="support3"
      />
      <div
        className="css-view-1dbjc4n IS5"
      />
      <TileAD
        tileName="support4"
      />
    </div>
  </div>
</div>
`;

exports[`5. standard 1`] = `
<style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS3 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS4 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS5 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 50px;
  padding-left: 50px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS6 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS6"
>
  <div
    className="css-view-1dbjc4n IS5"
  >
    <div
      className="css-view-1dbjc4n"
    >
      <TileK
        breakpoint="wide"
      />
      <div
        className="css-view-1dbjc4n IS1"
      />
      <TileK
        breakpoint="wide"
      />
      <div
        className="css-view-1dbjc4n IS2"
      />
      <TileK
        breakpoint="wide"
      />
      <div
        className="css-view-1dbjc4n IS3"
      />
      <TileK
        breakpoint="wide"
      />
      <div
        className="css-view-1dbjc4n IS4"
      />
      <TileK
        breakpoint="wide"
      />
    </div>
  </div>
</div>
`;

exports[`6. lead two no pic and two 1`] = `
<style>
.IS1 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS2 {
  width: 42%;
}

.IS3 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 15px;
  margin-bottom: 15px;
}

.IS4 {
  width: 42%;
}

.IS5 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 15px;
  margin-bottom: 15px;
}

.IS6 {
  width: 16%;
}

.IS7 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS8 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS8"
>
  <div
    className="css-view-1dbjc4n IS7"
  >
    <div
      className="css-view-1dbjc4n IS2"
    >
      <TileX
        tileName="lead1"
      />
      <div
        className="css-view-1dbjc4n IS1"
      />
      <TileY
        tileName="lead2"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS3"
    />
    <div
      className="css-view-1dbjc4n IS4"
    >
      <TileE
        breakpoint="wide"
        tileName="support1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS5"
    />
    <div
      className="css-view-1dbjc4n IS6"
    >
      <TileAL
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`7. secondary one 1`] = `
<style>
.IS1 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS1"
>
  <TileW
    breakpoint="wide"
    tileName="secondary"
  />
</div>
`;

exports[`8. secondary one and columnist 1`] = `
<style>
.IS1 {
  width: 67%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 15px;
  margin-bottom: 15px;
}

.IS3 {
  padding-top: 5px;
  padding-bottom: 5px;
  width: 33%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS5"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAB
        breakpoint="wide"
        tileName="columnist"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileB
        breakpoint="wide"
        tileName="secondary"
        withMoreTeaser={true}
      />
    </div>
  </div>
</div>
`;

exports[`9. secondary four 1`] = `
<style>
.IS1 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 15px;
  margin-bottom: 15px;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS4 {
  -webkit-flex-grow: 2;
  flex-grow: 2;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 2;
  -webkit-box-flex: 2;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 15px;
  margin-bottom: 15px;
}

.IS6 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS7 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  padding-top: 5px;
  padding-bottom: 5px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS9"
>
  <div
    className="css-view-1dbjc4n IS8"
  >
    <div
      className="css-view-1dbjc4n IS4"
    >
      <div
        className="css-view-1dbjc4n IS1"
      >
        <TileAR
          tileName="secondary1"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS2"
      />
      <div
        className="css-view-1dbjc4n IS3"
      >
        <TileAR
          tileName="secondary2"
        />
      </div>
    </div>
    <div
      className="css-view-1dbjc4n IS5"
    />
    <div
      className="css-view-1dbjc4n IS7"
    >
      <TileB
        additionalHeadlineStyles={
          Object {
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": "5px",
          }
        }
        breakpoint="wide"
        tileName="secondary3"
      />
      <div
        className="css-view-1dbjc4n IS6"
      />
      <TileB
        additionalHeadlineStyles={
          Object {
            "fontSize": 20,
            "lineHeight": 20,
            "marginBottom": "5px",
          }
        }
        breakpoint="wide"
        tileName="secondary4"
      />
    </div>
  </div>
</div>
`;

exports[`10. secondary one and four 1`] = `
<style>
.IS1 {
  background-color: rgba(39,45,52,1.00);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 15px;
  margin-right: 15px;
  margin-bottom: 15px;
  margin-left: 15px;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS2 {
  border-bottom-color: rgba(77,77,77,1.00);
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 15px;
  margin-left: 15px;
}

.IS3 {
  width: 50%;
}

.IS4 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  width: 50%;
}

.IS6 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  width: 50%;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  border-bottom-width: 1px;
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS10 {
  width: 50%;
}

.IS11 {
  border-top-color: rgba(77,77,77,1.00);
  border-right-color: rgba(77,77,77,1.00);
  border-bottom-color: rgba(77,77,77,1.00);
  border-left-color: rgba(77,77,77,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS12 {
  width: 50%;
}

.IS13 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS14 {
  width: 50%;
}

.IS15 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS16 {
  background-color: rgba(39,45,52,1.00);
}

.IS17 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}

.IS18 {
  background-color: rgba(39,45,52,1.00);
}
</style>

<div
  className="css-view-1dbjc4n IS18"
>
  <div
    className="css-view-1dbjc4n IS17"
  >
    <div
      className="css-view-1dbjc4n IS16"
    >
      <div
        className="css-view-1dbjc4n IS1"
      >
        <TheTimesLogo
          height={40}
          width={42}
        />
      </div>
      <div
        className="css-view-1dbjc4n IS2"
      />
      <div
        className="css-view-1dbjc4n IS15"
      >
        <div
          className="css-view-1dbjc4n IS3"
        >
          <div
            className="css-view-1dbjc4n"
          >
            <TileN
              breakpoint="wide"
              tileName="secondary"
            />
          </div>
        </div>
        <div
          className="css-view-1dbjc4n IS4"
        />
        <div
          className="css-view-1dbjc4n IS14"
        >
          <div
            className="css-view-1dbjc4n IS8"
          >
            <div
              className="css-view-1dbjc4n IS5"
            >
              <TileO
                breakpoint="wide"
                tileName="support1"
              />
            </div>
            <div
              className="css-view-1dbjc4n IS6"
            />
            <div
              className="css-view-1dbjc4n IS7"
            >
              <TileO
                breakpoint="wide"
                tileName="support2"
              />
            </div>
          </div>
          <div
            className="css-view-1dbjc4n IS9"
          />
          <div
            className="css-view-1dbjc4n IS13"
          >
            <div
              className="css-view-1dbjc4n IS10"
            >
              <TileO
                breakpoint="wide"
                tileName="support3"
              />
            </div>
            <div
              className="css-view-1dbjc4n IS11"
            />
            <div
              className="css-view-1dbjc4n IS12"
            >
              <TileO
                breakpoint="wide"
                tileName="support4"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`11. secondary two and two 1`] = `
<style>
.IS1 {
  width: 33.4%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 16.6%;
}

.IS4 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  width: 33.4%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  width: 16.6%;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS9"
>
  <div
    className="css-view-1dbjc4n IS8"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAM
        tileName="secondary1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAN
        tileName="support1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS4"
    />
    <div
      className="css-view-1dbjc4n IS5"
    >
      <TileAM
        tileName="secondary2"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS6"
    />
    <div
      className="css-view-1dbjc4n IS7"
    >
      <TileAN
        tileName="support2"
      />
    </div>
  </div>
</div>
`;

exports[`12. secondary two no pic and two 1`] = `
<style>
.IS1 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 15px;
  margin-bottom: 10px;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS6 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS7 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-bottom: 15px;
  margin-top: 10px;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS9 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS10 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  margin-right: 10px;
  margin-left: 10px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS11 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS11"
>
  <div
    className="css-view-1dbjc4n IS10"
  >
    <div
      className="css-view-1dbjc4n IS4"
    >
      <div
        className="css-view-1dbjc4n IS1"
      >
        <TileAE
          tileName="secondary1"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS2"
      />
      <div
        className="css-view-1dbjc4n IS3"
      >
        <TileAE
          tileName="secondary2"
        />
      </div>
    </div>
    <div
      className="css-view-1dbjc4n IS5"
    />
    <div
      className="css-view-1dbjc4n IS9"
    >
      <div
        className="css-view-1dbjc4n IS6"
      >
        <TileG
          breakpoint="wide"
          tileName="support1"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS7"
      />
      <div
        className="css-view-1dbjc4n IS8"
      >
        <TileG
          breakpoint="wide"
          tileName="support2"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`13. list two and six no pic 1`] = `
<style>
.IS1 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
}

.IS4 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS5 {
  width: 50%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS7 {
  width: 50%;
}

.IS8 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS9 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS10 {
  width: 50%;
}

.IS11 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS12 {
  width: 50%;
}

.IS13 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS14 {
  border-bottom-width: 1px;
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-right: 10px;
  margin-left: 10px;
}

.IS15 {
  width: 50%;
}

.IS16 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS17 {
  width: 50%;
}

.IS18 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS19 {
  width: 50%;
}

.IS20 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-right: 10px;
  margin-left: 10px;
  margin-top: 5px;
  margin-bottom: 5px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS21 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS21"
>
  <div
    className="css-view-1dbjc4n IS20"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAS
        breakpoint="wide"
        tileName="lead1"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAS
        breakpoint="wide"
        tileName="lead2"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS4"
    />
    <div
      className="css-view-1dbjc4n IS19"
    >
      <div
        className="css-view-1dbjc4n IS8"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <TileL
            breakpoint="wide"
            tileName="support1"
          />
        </div>
        <div
          className="css-view-1dbjc4n IS6"
        />
        <div
          className="css-view-1dbjc4n IS7"
        >
          <TileL
            breakpoint="wide"
            tileName="support2"
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n IS9"
      />
      <div
        className="css-view-1dbjc4n IS13"
      >
        <div
          className="css-view-1dbjc4n IS10"
        >
          <TileL
            breakpoint="wide"
            tileName="support3"
          />
        </div>
        <div
          className="css-view-1dbjc4n IS11"
        />
        <div
          className="css-view-1dbjc4n IS12"
        >
          <TileL
            breakpoint="wide"
            tileName="support4"
          />
        </div>
      </div>
      <div
        className="css-view-1dbjc4n IS14"
      />
      <div
        className="css-view-1dbjc4n IS18"
      >
        <div
          className="css-view-1dbjc4n IS15"
        >
          <TileL
            breakpoint="wide"
            tileName="support5"
          />
        </div>
        <div
          className="css-view-1dbjc4n IS16"
        />
        <div
          className="css-view-1dbjc4n IS17"
        >
          <TileL
            breakpoint="wide"
            tileName="support6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`14. leaders 1`] = `
<style>
.IS1 {
  height: 42;
  width: 237;
}

.IS2 {
  color: rgba(133,0,41,1.00);
  font-family: TimesDigitalW04-Regular;
  font-size: 15px;
  line-height: 15px;
  text-align: center;
}

.IS3 {
  padding-top: 10px;
}

.IS4 {
  -webkit-align-items: center;
  align-items: center;
  -ms-flex-align: center;
  -webkit-box-align: center;
}

.IS5 {
  padding-right: 20px;
  padding-left: 20px;
  width: 33%;
}

.IS6 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-bottom: 60px;
  margin-top: 30px;
}

.IS7 {
  padding-right: 20px;
  padding-left: 20px;
  width: 33%;
}

.IS8 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-bottom: 60px;
  margin-top: 30px;
}

.IS9 {
  padding-right: 20px;
  padding-left: 20px;
  width: 33%;
}

.IS10 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS11 {
  background-color: rgba(240,240,240,1.00);
  margin-right: 20px;
  margin-left: 20px;
  margin-top: 15px;
  margin-bottom: 15px;
  padding-top: 30px;
}

.IS12 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS12"
>
  <div
    className="css-view-1dbjc4n IS11"
  >
    <div
      className="css-view-1dbjc4n IS4"
    >
      <Image
        aspectRatio={5.74}
        className="IS1"
        uri="https://www.thetimes.co.uk/d/img/leaders-masthead-d17db00289.png"
      />
      <div
        className="css-view-1dbjc4n IS3"
      >
        <div
          className="css-text-901oao IS2"
        >
           Leading Articles 
        </div>
      </div>
    </div>
    <div
      className="css-view-1dbjc4n IS10"
    >
      <div
        className="css-view-1dbjc4n IS5"
      >
        <TileM
          breakpoint="wide"
          tileName="leader2"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS6"
      />
      <div
        className="css-view-1dbjc4n IS7"
      >
        <TileM
          breakpoint="wide"
          tileName="leader1"
        />
      </div>
      <div
        className="css-view-1dbjc4n IS8"
      />
      <div
        className="css-view-1dbjc4n IS9"
      >
        <TileM
          breakpoint="wide"
          tileName="leader3"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`15. comment lead and cartoon 1`] = `
<style>
.IS1 {
  width: 33.3%;
}

.IS2 {
  border-top-color: rgba(219,219,219,1.00);
  border-right-color: rgba(219,219,219,1.00);
  border-bottom-color: rgba(219,219,219,1.00);
  border-left-color: rgba(219,219,219,1.00);
  border-right-width: 1px;
  border-top-style: solid;
  border-right-style: solid;
  border-bottom-style: solid;
  border-left-style: solid;
  margin-top: 10px;
  margin-bottom: 10px;
}

.IS3 {
  width: 66.7%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS5"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAH
        breakpoint="wide"
        tileName="lead"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    />
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAI
        breakpoint="wide"
        tileName="cartoon"
      />
    </div>
  </div>
</div>
`;

exports[`16. puzzle 1`] = `
<style>
.IS1 {
  width: 33.3%;
}

.IS2 {
  width: 33.3%;
}

.IS3 {
  width: 33.3%;
}

.IS4 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-right: 10px;
  padding-left: 10px;
  padding-top: 15px;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
}

.IS5 {
  -webkit-align-self: center;
  align-self: center;
  max-width: 100%;
  padding-right: 0px;
  padding-left: 0px;
  width: 1366px;
  -ms-flex-item-align: center;
}
</style>

<div
  className="css-view-1dbjc4n IS5"
>
  <div
    className="css-view-1dbjc4n IS4"
  >
    <div
      className="css-view-1dbjc4n IS1"
    >
      <TileAK
        breakpoint="wide"
        id="0"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS2"
    >
      <TileAK
        breakpoint="wide"
        id="1"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
    <div
      className="css-view-1dbjc4n IS3"
    >
      <TileAK
        breakpoint="wide"
        id="2"
        image={
          Object {
            "crop11": null,
            "crop169": null,
            "crop23": null,
            "crop32": Object {
              "url": "https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0",
            },
            "crop45": null,
            "crops": Array [],
            "id": "522abf2c-e752-11e8-9f32-f2801f1b9fd1",
          }
        }
        title="Times Concise medium No 7881"
        url="/crossword/123"
      />
    </div>
  </div>
</div>
`;
